# ML_Science

./: .gitignore  Dockerfile  README.md  pyproject.toml
singularity/: create_image.sh  ml4science.def
src/: __init__.py  create_data.py  train_model.py
src/dataset/: __init__.py  data_structures.py  generation.py  prompting.py
