[project]
name = "scientific-expansion"
version = "0.1.0"
description = "Graph ML Project for Expanding Scientific Research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.4.1,<4.0.0",
    "matplotlib>=3.10.6",
    "ogb>=1.3.6",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "torch-geometric>=2.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
