[project]
name = "scientific-expansion"
version = "0.1.0"
description = "Graph ML Project for Expanding Scientific Research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.4.1,<4.0.0",
    "matplotlib>=3.10.6",
    "ogb>=1.3.6",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "torch-geometric>=2.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
finetuning = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.47.0",
    "peft>=0.17.1",
    "torch>=2.6.0",
    "transformers>=4.56.1",
    "trl==0.22.2",
]
